# transit_dashboard

./: .gitignore  .metadata  .pre-commit-config.yaml  Gemfile  Pipfile  README.md  analysis_options.yaml  build.yaml  late.json  main.py  pubspec.yaml  pyproject.toml  soap.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  test.yml  update.yaml  update_dep.yml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/transit_dashboard/: MainActivity.kt
android/app/src/main/kotlin/me/mause/transit_dashboard/: MainActivity.kt
fastlane/: Appfile  Fastfile  Pluginfile
lib/: background.dart  client.dart  errors.dart  journey_planner_service.dart  loggers.dart  main.dart  pair.dart  transit.dart  tuple_comparing.dart
lib/swaggers/: journey_planner.json  journeyplanner.wsdl  realtime_trip.json
test/: notifications_test.dart  widget_test.dart
