[tool.poetry]
name = "transit_dashboard"
version = "0.1.0"
description = ""
authors = ["Elliana May <me@mause.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
python-dateutil = "^2.8.2"
humanize = "^3.14.0"
zeep = "^4.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
